--- a/apply.html
+++ b/apply.html
@@ -68,8 +68,8 @@
                             </label>
                         </div>
                         <div class="form-note">
-                            매주 월요일 (회당 1시간 30분)<br>
-                            일정: 2/2, 2/9, 2/16, 2/23
+                            매주 화요일 (회당 1시간 30분)<br>
+                            일정: 2/3, 2/10, 2/17, 2/24
                         </div>
                     </div>
                     <div class="form-group">
