--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="중국어 회화 입문 모집 - Linky Lounge Study">
-    <meta property="og:description" content="나랑 중국어 회화 배울 사람! 2026년 2월 중국어 회화를 입문하고 싶은 분들을 모집합니다! 매주 월요일 4주 과정">
+    <meta property="og:description" content="나랑 중국어 회화 배울 사람! 2026년 2월 중국어 회화를 입문하고 싶은 분들을 모집합니다! 매주 화요일 4주 과정">
     <meta property="og:image" content="./link-ylounge-image/linky-japan-og.png">
     <meta property="og:site_name" content="Linky Lounge Japaness Study">
 
@@ -76,18 +76,18 @@
                 <div class="date-card">
                     <div class="date">A반</div>
                     <div class="time">19:00 ~ 20:30</div>
-                    <div class="seats">매주 월요일 (90분)</div>
+                    <div class="seats">매주 화요일 (90분)</div>
                 </div>
                 <div class="date-card">
                     <div class="date">B반</div>
                     <div class="time">21:00 ~ 22:30</div>
-                    <div class="seats">매주 월요일 (90분)</div>
+                    <div class="seats">매주 화요일 (90분)</div>
                 </div>
             </div>
             <div style="text-align: center; margin-top: 30px;">
                 <p style="font-size: 16px; color: #666;">
-                    일정: 2/2, 2/9, 2/16, 2/23 (총 4주)<br>
-                    <strong style="color: #2c5f2d;">비용: 10만원 (4주, 주 1회)</strong>
+                    일정: 2/3, 2/10, 2/17, 2/24 (총 4주)<br>
+                    <strong style="color: #5f2c2c;">비용: 10만원 (4주, 주 1회)</strong>
                 </p>
             </div>
         </div>
@@ -129,7 +129,7 @@
                     <div class="timeline-time">04.</div>
                     <div class="timeline-content">
                         <h3>4주 전 과정 참여 가능</h3>
-                        <p>매주 월요일 4주 과정에 <br class="mobile-break">빠짐없이 참여하실 수 있는 분</p>
+                        <p>매주 화요일 4주 과정에 <br class="mobile-break">빠짐없이 참여하실 수 있는 분</p>
                     </div>
                 </div>
             </div>
