--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="중국어 회화 입문 모집 - Linky Lounge Study">
     <meta property="og:description" content="나랑 중국어 회화 배울 사람! 2026년 2월 중국어 회화를 입문하고 싶은 분들을 모집합니다! 매주 화요일 4주 과정">
-    <meta property="og:image" content="./link-ylounge-image/linky-japan-og.png">
+    <meta property="og:image" content="./link-ylounge-image/linky-china-og.jpeg">
     <meta property="og:site_name" content="Linky Lounge Japaness Study">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
