--- a/apply.html
+++ b/apply.html
@@ -7,7 +7,7 @@
 
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="신청하기 - 일본어 회화 입문 모집 | Linky Lounge">
-    <meta property="og:description" content="나랑 일본어 회화 배울 사람! 매주 월요일 4주 과정 일본어 회화 스터디 모집">
+    <meta property="og:description" content="나랑 일본어 회화 배울 사람! 매주 화요일 4주 과정 일본어 회화 스터디 모집">
     <meta property="og:image" content="./link-ylounge-image/main.jpg">
     <meta property="og:site_name" content="Linky Lounge Study">
 
