--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 나랑 중국어 회화 배울 사람!<br class="mobile-break">
                 중국어 회화를 입문하고 싶은 분들을 모집합니다!
             </p>
-            <a href="#apply" class="btn-primary">신청하기</a>
+            <a href="#apply" class="btn-primary">지금 신청하기</a>
         </div>
     </div>
 
