--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                     <div class="footer-info">
                         <p>주식회사 링키</p>
                         <p>대표 : 안동민 | 개인정보관리책임자 : 안동민</p>
-                        <p>사업자등록번호 : 557-81-03588</p>
+                        <p>사업자등록번호: 517-81-03588 | 통신판매업신고번호: 2026-별내-0077</p>
                         <p>이메일 : linkylounge@gmail.com | 대표번호 : 010-7444-5790</p>
                         <p>주소: 경기도 남양주시 별내3로 322, 404호</p>
                     </div>
