--- a/index.html
+++ b/index.html
@@ -245,14 +245,14 @@
                 </p>
             </div>
             <div style="text-align: center; margin-top: 50px;">
-                <a href="apply.html" class="btn-primary" style="padding: 20px 60px; font-size: 14px;">신청 페이지로 이동</a>
+                <a href="https://study-apply.vercel.app/" class="btn-primary" style="padding: 20px 60px; font-size: 14px;">신청 페이지로 이동</a>
             </div>
         </div>
     </section>
 
     <!-- Floating Apply Button -->
     <div class="floating-apply-btn" id="floatingApplyBtn">
-        <a href="apply.html" class="btn-primary">신청하기</a>
+        <a href="https://study-apply.vercel.app/" class="btn-primary">신청하기</a>
     </div>
 
     <!-- Footer -->
